Change ResultsWriter to no longer require a specific ModeOfInheritance Replace MOI-specific writers with new rank-based all MOI writers